--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   "dependencies": {
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-gifted-chat": "^0.9.11",
+    "react-native-reanimated": "^1.2.0",
+    "react-native-screens": "^2.0.0-alpha.1",
     "react-native-svg": "^9.8.4",
-    "react-native-svg-transformer": "^0.13.0"
+    "react-native-svg-transformer": "^0.13.0",
+    "react-navigation": "^4.0.0",
+    "react-navigation-stack": "^1.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
