--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "bluebird": "^3.5.5",
+    "jaro-winkler": "^0.2.8",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
