--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-gifted-chat": "^0.9.11",
     "react-native-reanimated": "^1.2.0",
     "react-native-screens": "^2.0.0-alpha.1",
+    "react-native-swiper": "^1.5.14",
     "react-navigation": "^4.0.0",
     "react-navigation-stack": "^1.5.3"
   },
