--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-gifted-chat": "^0.9.11",
+    "react-native-paper": "^2.16.0",
     "react-native-reanimated": "^1.2.0",
     "react-native-screens": "^2.0.0-alpha.1",
     "react-native-swiper": "^1.5.14",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.0",
+    "react-navigation-material-bottom-tabs": "^2.1.1",
     "react-navigation-stack": "^1.5.3"
   },
   "devDependencies": {
